--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <main class="container mx-auto mt-8">
         <!-- search button section -->
         <section class="bf-gray-100 p-4 m-4">
-            <input id="search-feild" type="text" placeholder="search..." class="input input-bordered w-full max-w-xs" />
+            <input id="search-feild" type="text" placeholder="search here"
+                class="input input-bordered w-full max-w-xs" />
             <button onclick="handleSearch()" class="btn btn-accent">Search</button>
 
-            <input id="search-feild2" type="text" placeholder="search here"
+            <!-- <input id="search-feild2" type="text" placeholder="search here"
                 class="input input-bordered w-full max-w-xs" />
-            <button onclick="handleSearch2()" class="btn btn-accent">Search</button>
+            <button onclick="handleSearch2()" class="btn btn-accent">Search</button> -->
         </section>
 
         <section>
@@ -36,10 +37,27 @@
             </div>
 
             <!-- show all btn -->
-            <div id="show-all-btn" class="hidden">
+            <div onclick="showAllButton()" id="show-all-btn" class="hidden text-center my-8">
                 <button class="btn btn-accent">Show All</button>
             </div>
-
+        </section>
+        
+        <!-- show details modal  -->
+        <section>
+            <!-- Open the modal using ID.showModal() method -->
+            <button class="btn" onclick="show_details_modal.showModal()">open modal</button>
+            <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+                <div class="modal-box">
+                    <h3 class="font-bold text-lg">Hello!</h3>
+                    <p class="py-4">Press ESC key or click the button below to close</p>
+                    <div class="modal-action">
+                        <form method="dialog">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn">Close</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog>
         </section>
     </main>
     <footer>
