--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         <!-- show details modal  -->
         <section>
             <!-- Open the modal using ID.showModal() method -->
-            <button class="btn" onclick="show_details_modal.showModal()">open modal</button>
             <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
                 <div class="modal-box">
-                    <h3 class="font-bold text-lg">Hello!</h3>
-                    <p class="py-4">Press ESC key or click the button below to close</p>
+                    <h3 id="show-Details-Phone-Name" class="font-bold text-3xl"></h3>
+
+                    <div id="show-Details-container" class="text-2xl space-y-1">
+                    </div>
                     <div class="modal-action">
                         <form method="dialog">
                             <!-- if there is a button in form, it will close the modal -->
